# hackathonDB

./: .gitignore  README.md  mongoDB_test.ipynb  pytest.ini  start.sh
admin/: database.py  main.py  requirements.txt  settings.py
admin/templates/: _database_toggle.html  _form.html  _inbox_items.html  _scraper_controls.html  admin_panel.html  base.html  submit_hackathons.html
backend/: .dockerignore  Dockerfile  database.py  fullstart.sh  inbox_processor.py  main.py  models.py  public_routes.py  requirements.txt  run_scrapers.py  scraping_routes.py  settings.py
backend/scrapers/: base_scraper.py  mlh_scraper.py  mock_scraper.py
backend/templates/: submit_hackathons.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: svelte-select.d.ts
frontend/src/lib/: Alert.svelte  HackathonCard.svelte  InputWithSubmit.svelte  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  LocationFilter.svelte  StatusFilter.svelte  TextFilter.svelte  utils.ts
frontend/src/stores/: darkMode.js
playground/: geodata_test.ipynb  mlh_scrape_test.ipynb  mongoDB_test.ipynb
shared/: pyproject.toml
shared/shared_models/: __init__.py  models.py
tests/: conftest.py
tests/backend/: test_inbox_processor.py
